--- a/ios/Home/CollectionCell/ChartCollectionViewCell.xib
+++ b/ios/Home/CollectionCell/ChartCollectionViewCell.xib
@@ -25,13 +25,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="테넷" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyS-BH-zm5">
-                        <rect key="frame" x="0.0" y="246" width="130" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="0.0" y="240" width="130" height="23"/>
+                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lzx-3d-Q0e">
-                        <rect key="frame" x="20" y="310" width="90" height="30"/>
+                        <rect key="frame" x="20" y="306.5" width="90" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="elw-dw-wn4"/>
                             <constraint firstAttribute="width" constant="90" id="rQB-RF-Pvp"/>
@@ -41,7 +41,7 @@
                         </state>
                     </button>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="98Y-y9-o5M">
-                        <rect key="frame" x="0.0" y="274.5" width="130" height="30"/>
+                        <rect key="frame" x="0.0" y="271" width="130" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="예매율" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9o-rI-xF3">
                                 <rect key="frame" x="0.0" y="0.0" width="62.5" height="30"/>
@@ -69,10 +69,10 @@
                 <constraint firstAttribute="trailing" secondItem="AWs-yX-RbJ" secondAttribute="trailing" id="C5Q-1t-Kzs"/>
                 <constraint firstItem="lzx-3d-Q0e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="D8c-m7-b59"/>
                 <constraint firstItem="98Y-y9-o5M" firstAttribute="top" secondItem="tyS-BH-zm5" secondAttribute="bottom" constant="8" id="UJ9-xl-TYj"/>
-                <constraint firstItem="tyS-BH-zm5" firstAttribute="top" secondItem="AWs-yX-RbJ" secondAttribute="bottom" constant="6" id="V4Y-59-nU9"/>
+                <constraint firstItem="tyS-BH-zm5" firstAttribute="top" secondItem="AWs-yX-RbJ" secondAttribute="bottom" id="V4Y-59-nU9"/>
                 <constraint firstAttribute="trailing" secondItem="98Y-y9-o5M" secondAttribute="trailing" id="fYP-7Y-u6m"/>
+                <constraint firstItem="lzx-3d-Q0e" firstAttribute="top" secondItem="98Y-y9-o5M" secondAttribute="bottom" constant="5.5" id="j6X-Vs-E6b"/>
                 <constraint firstItem="AWs-yX-RbJ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="oCL-sU-tn1"/>
-                <constraint firstAttribute="bottom" secondItem="lzx-3d-Q0e" secondAttribute="bottom" constant="10" id="rGR-Vw-3UR"/>
                 <constraint firstAttribute="trailing" secondItem="lzx-3d-Q0e" secondAttribute="trailing" constant="20" id="uQ1-em-ZpS"/>
                 <constraint firstItem="AWs-yX-RbJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="zrz-Qy-oO6"/>
             </constraints>
