--- a/ios/LogIn/LInputViewController.xib
+++ b/ios/LogIn/LInputViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LInputViewController" customModule="ios" customModuleProvider="target">
             <connections>
+                <outlet property="btn_box" destination="t0W-EB-eeD" id="QpH-Mo-1l5"/>
                 <outlet property="uidTextField" destination="dsr-jq-6QT" id="FvA-hG-eA1"/>
                 <outlet property="upwTextField" destination="RKy-eW-sXa" id="Yii-Aa-SZX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -39,21 +40,29 @@
                                 <action selector="pressGetSignUpResult:" destination="-1" eventType="touchUpInside" id="gsE-dF-HEs"/>
                             </connections>
                         </button>
-                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CGV 아이디" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dsr-jq-6QT">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CGV 아이디" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dsr-jq-6QT">
                             <rect key="frame" x="8" y="146" width="398" height="37"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="398" id="1aM-V5-8Fa"/>
+                                <constraint firstAttribute="height" constant="37" id="s8l-tq-ODj"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CGV 비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RKy-eW-sXa">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CGV 비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RKy-eW-sXa">
                             <rect key="frame" x="8" y="201" width="398" height="37"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="398" id="kDT-cE-AYh"/>
+                                <constraint firstAttribute="height" constant="37" id="tdz-bf-MOW"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JST-hX-xtx">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JST-hX-xtx">
                             <rect key="frame" x="44" y="267" width="65" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="X0e-qa-PxZ"/>
+                            </constraints>
                             <state key="normal" title="자동로그인">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
@@ -65,12 +74,40 @@
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                         </button>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cgv_big" translatesAutoresizingMaskIntoConstraints="NO" id="Boj-2Y-LUC">
-                            <rect key="frame" x="140" y="31" width="135" height="85"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cgv_big" translatesAutoresizingMaskIntoConstraints="NO" id="Boj-2Y-LUC">
+                            <rect key="frame" x="139.5" y="31" width="135" height="85"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="85" id="3xB-KD-pIw"/>
+                                <constraint firstAttribute="width" constant="135" id="ZpW-rM-Ddo"/>
+                            </constraints>
                         </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t0W-EB-eeD" customClass="CheckBox" customModule="ios" customModuleProvider="target">
+                            <rect key="frame" x="8" y="267" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="Um9-Rq-OOh"/>
+                                <constraint firstAttribute="height" constant="30" id="bhV-73-yDf"/>
+                            </constraints>
+                            <state key="normal" backgroundImage="noncheck1"/>
+                            <state key="selected" backgroundImage="noncheck2"/>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="JST-hX-xtx" firstAttribute="leading" secondItem="t0W-EB-eeD" secondAttribute="trailing" constant="6" id="Agc-Wk-z4h"/>
+                        <constraint firstItem="t0W-EB-eeD" firstAttribute="top" secondItem="RKy-eW-sXa" secondAttribute="bottom" constant="29" id="GjJ-Rh-JuG"/>
+                        <constraint firstItem="JST-hX-xtx" firstAttribute="top" secondItem="RKy-eW-sXa" secondAttribute="bottom" constant="29" id="RPx-Yh-VHb"/>
+                        <constraint firstAttribute="trailing" secondItem="dsr-jq-6QT" secondAttribute="trailing" constant="8" id="Rhm-Tx-1rQ"/>
+                        <constraint firstItem="dsr-jq-6QT" firstAttribute="leading" secondItem="CHK-Kk-mJo" secondAttribute="leading" constant="8" id="RiE-aB-OCI"/>
+                        <constraint firstItem="dsr-jq-6QT" firstAttribute="top" secondItem="Boj-2Y-LUC" secondAttribute="bottom" constant="30" id="U9i-cr-gfL"/>
+                        <constraint firstItem="t0W-EB-eeD" firstAttribute="centerY" secondItem="JST-hX-xtx" secondAttribute="centerY" id="Xd0-Mn-jPM"/>
+                        <constraint firstItem="RKy-eW-sXa" firstAttribute="top" secondItem="dsr-jq-6QT" secondAttribute="bottom" constant="18" id="k4k-m3-a6l"/>
+                        <constraint firstItem="t0W-EB-eeD" firstAttribute="leading" secondItem="CHK-Kk-mJo" secondAttribute="leading" constant="8" id="n1q-2C-X04"/>
+                        <constraint firstItem="Boj-2Y-LUC" firstAttribute="top" secondItem="CHK-Kk-mJo" secondAttribute="top" constant="31" id="opj-0N-Eje"/>
+                        <constraint firstItem="RKy-eW-sXa" firstAttribute="leading" secondItem="CHK-Kk-mJo" secondAttribute="leading" constant="8" id="uVJ-h6-EPJ"/>
+                        <constraint firstAttribute="trailing" secondItem="RKy-eW-sXa" secondAttribute="trailing" constant="8" id="vg5-PM-phF"/>
+                        <constraint firstItem="Boj-2Y-LUC" firstAttribute="centerX" secondItem="CHK-Kk-mJo" secondAttribute="centerX" id="vtc-I5-vfb"/>
+                        <constraint firstItem="Boj-2Y-LUC" firstAttribute="centerX" secondItem="CHK-Kk-mJo" secondAttribute="centerX" id="ySN-6q-FR8"/>
+                    </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ItT-IN-gtG">
                     <rect key="frame" x="0.0" y="554" width="414" height="342"/>
@@ -129,5 +166,7 @@
     <resources>
         <image name="cgv_big" width="198" height="97"/>
         <image name="login" width="327" height="87"/>
+        <image name="noncheck1" width="130" height="126"/>
+        <image name="noncheck2" width="128" height="122"/>
     </resources>
 </document>
